# planning_poker

client/: .gitignore  .prettierrc.js  codegen.yml  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
client/public/: manifest.json  robots.txt  sitemap.xml
client/scripts/: add-404-redirect.js  write-vercel-manifest.mjs
client/src/: index.css  main.tsx  routeTree.gen.ts
client/src/api/: apollo-helpers.generated.ts  index.ts  operations.generated.ts  operations.graphql
client/src/components/AccountMenu/: index.tsx
client/src/components/Card/: index.tsx
client/src/components/ConfirmLogoutDialog/: index.tsx
client/src/components/CreateUserDialog/: index.tsx
client/src/components/Deck/: index.tsx
client/src/components/EditCardsDialog/: index.tsx
client/src/components/EditUserDialog/: index.tsx
client/src/contexts/: AuthContext.tsx  BackgroundContext.tsx
client/src/hooks/: use-toast.ts  use-toast.tsx
client/src/lib/: background-config.ts  theme-accent.ts
client/src/routes/: index.lazy.tsx  invalid-room.$roomId.lazy.tsx  missing-room.$roomId.lazy.tsx  room.$roomId.lazy.tsx
client/src/settings/: apiUrls.ts
client/src/types/: types.generated.ts
client/src/utils/: auth.ts  cardPositionContext.tsx  cookies.ts  enums.ts  getUserPickedCart.ts  messageUtils.ts  mobileUtils.tsx  overlayPortal.tsx  testUtils.tsx
server/: Cargo.toml  fly.toml
server/src/: main.rs  schema.rs  types.rs
server/src/domain/: chat.rs  deck.rs  mod.rs  room.rs  user.rs
(+40 files in other folders)
