[package]
name = "planning-poker-server"
version = "1.1.6"
authors = ["INQTR <ivanchenko.b@gmail.com>, Chris Parks <chrislparks7@gmail.com>"]
homepage = "https://www.summitplanningpoker.com/"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }

actix-web = "4.10"
config = { version = "0.15", default-features = false, features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.6"

async-graphql = { version = "7.0.15", features = ["apollo_tracing", "uuid"] }
async-graphql-actix-web = "7.0.15"

env_logger = "0.11"

futures = "0.3"
futures-util = "0.3"
futures-channel = "0.3"
futures-timer = "3.0"
async-stream = "0.3"

slab = "0.4"
once_cell = "1.21"

uuid = { version = "1", features = ["v4", "serde"] }
actix-cors = "0.7"

chrono = { version = "0.4", features = ["serde"] }
log = "0.4.28"
prometheus = "0.14.0"
sysinfo = "0.37.2"

[[bin]]
name = "poker-planning"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
